--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.todo-input {
+  @apply w-full h-11 px-3 py-8 rounded-lg outline-blue-500 text-lg md:text-xl text-gray-700;
+}
+
 .check-btn {
   @apply text-2xl md:text-3xl bg-slate-400 text-white cursor-pointer border rounded-full;
 }
