--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   @apply w-full h-11 px-3 py-8 rounded-lg outline-blue-500 text-lg md:text-xl text-gray-700;
 }
 
+.my-todo:last-child {
+  @apply border-b-0;
+}
+
 .check-btn {
   @apply text-2xl md:text-3xl bg-slate-400 text-white cursor-pointer border rounded-full;
 }
