--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
 .todo-input {
-  @apply w-full h-11 px-3 py-8 rounded-lg outline-blue-500 text-lg md:text-xl text-gray-700;
+  @apply w-full h-11 px-4 py-8 rounded-lg border border-y-text-light dark:border-text-dark outline-blue-400 dark:outline-none text-lg md:text-xl text-text-dark dark:text-text-light dark:bg-input-dark transition ease-in-out duration-300;
 }
 
 .my-todo:last-child {
@@ -11,14 +14,26 @@
 }
 
 .check-btn {
-  @apply text-2xl md:text-3xl bg-slate-400 text-white cursor-pointer border rounded-full;
+  @apply relative text-2xl md:text-3xl text-white cursor-pointer border rounded-full hover:border-active-option transition-colors ease-in duration-200;
 }
 
-.check-btn:hover {
-  border-color: red;
-  @apply transition-colors ease-in duration-200;
+.check-btn:focus {
+  background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 }
 
 .clear-btn {
-  @apply text-2xl md:text-3xl text-gray-600 cursor-pointer;
+  @apply text-xl md:text-2xl text-gray-600 cursor-pointer;
+}
+.toogle-btn {
+  animation: bounce 0.1s linear;
+  transition: all 0.5s;
+}
+
+@keyframes bounce {
+  0% {
+    transform: rotate(90deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
 }
