--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
 }
 .todo-input {
-  @apply w-full h-11 px-4 py-8 rounded-lg border border-y-text-light dark:border-text-dark outline-blue-400 dark:outline-none text-lg md:text-xl text-text-dark dark:text-text-light dark:bg-input-dark transition ease-in-out duration-100;
+  @apply w-full h-11 px-4 py-8 rounded-lg border border-y-text-light dark:border-text-dark 
+  outline-blue-400 dark:outline-none text-lg md:text-xl text-text-dark dark:text-text-light 
+  dark:bg-input-dark transition ease-in-out duration-100;
 }
 
 .my-todo:last-child {
@@ -14,7 +16,8 @@
 }
 
 .check-btn {
-  @apply relative text-2xl md:text-3xl text-transparent cursor-pointer border dark:border-gray-700 rounded-full hover:border-active-option dark:hover:border-active-option transition-colors ease-in duration-200;
+  @apply relative text-2xl md:text-3xl text-transparent cursor-pointer border dark:border-gray-700 
+  rounded-full hover:border-active-option dark:hover:border-active-option transition-colors ease-in duration-200;
 }
 
 .check-btn:focus {
@@ -31,6 +34,11 @@
 
 .options{
   @apply hover:text-dark-gray duration-100 ease-in-out;
+}
+
+.main-options{
+  @apply font-semibold absolute top-[85px] left-0 bg-input-dark rounded-lg w-full 
+  py-3 px-8 text-center md:relative md:w-auto md:bottom-0 md:left-0 md:py-0 md:px-0 md:bg-transparent;
 }
 
 @keyframes bounce {
