--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,16 @@
   @apply border-b-0;
 }
 
-.check-btn {
-  @apply relative text-2xl md:text-3xl text-transparent cursor-pointer border dark:border-gray-700 
-  rounded-full hover:border-active-option dark:hover:border-active-option transition-colors ease-in duration-200;
+.todo-content{
+  @apply text-text-dark dark:text-text-light md:text-xl pl-5 transition ease-in-out duration-100;
 }
 
-.check-btn:focus {
+.check-btn {
+  @apply relative text-2xl md:text-3xl text-white cursor-pointer border dark:border-gray-700 rounded-full 
+  hover:border-active-option dark:hover:border-active-option transition-colors ease-in duration-200;
+}
+
+.completed {
   background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 }
 
@@ -37,8 +41,8 @@
 }
 
 .main-options{
-  @apply md:font-semibold absolute top-[85px] left-0 bg-input-dark rounded-lg w-full 
-  py-3 px-8 text-center md:relative md:w-auto md:top-0 md:left-0 md:py-0 md:px-0 md:bg-transparent;
+  @apply md:font-semibold absolute top-[85px] left-0 bg-white dark:bg-input-dark shadow-lg md:shadow-none shadow-light-shadow 
+  dark:shadow-dark-shadow rounded-lg w-full py-3 px-8 text-center md:relative md:w-auto md:top-0 md:left-0 md:py-0 md:px-0 md:bg-transparent;
 }
 
 @keyframes bounce {
