--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 * {
   box-sizing: border-box;
 }
+.app-bg{
+  @apply bg-white-body dark:bg-dark-bg transition ease-in-out duration-300 h-screen w-full absolute top-0 
+  left-0 right-0 -z-20;
+}
 .todo-input {
   @apply w-full h-11 px-4 py-8 rounded-lg border border-y-text-light dark:border-text-dark 
   outline-blue-400 dark:outline-none text-lg md:text-xl text-text-dark dark:text-text-light 
