--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 * {
   box-sizing: border-box;
 }
-.app-bg{
+.app-bg {
   @apply bg-white-body dark:bg-dark-bg transition ease-in-out duration-300 h-screen w-full absolute top-0 
   left-0 right-0 -z-20;
 }
@@ -19,12 +19,12 @@
   @apply border-b-0;
 }
 
-.todo-content{
+.todo-content {
   @apply text-text-dark dark:text-text-light md:text-xl pl-5 transition ease-in-out duration-100;
 }
 
 .check-btn {
-  @apply relative text-2xl md:text-3xl text-white cursor-pointer border dark:border-gray-700 rounded-full 
+  @apply relative text-2xl md:text-3xl text-gray-900 dark:text-white border-gray-800 cursor-pointer border dark:border-gray-700 rounded-full 
   hover:border-active-option dark:hover:border-active-option transition-colors ease-in duration-200;
 }
 
@@ -40,11 +40,11 @@
   transition: all 0.5s;
 }
 
-.options{
+.options {
   @apply hover:text-dark-gray duration-100 ease-in-out;
 }
 
-.main-options{
+.main-options {
   @apply md:font-semibold absolute top-[85px] left-0 bg-white dark:bg-input-dark shadow-lg md:shadow-none shadow-light-shadow 
   dark:shadow-dark-shadow rounded-lg w-full py-3 px-8 text-center md:relative md:w-auto md:top-0 md:left-0 md:py-0 md:px-0 md:bg-transparent;
 }
